# shiptrade

./: Briffing,txt  CMakeLists.txt  Cargo.cpp  Cargo.h  Diagram bez tytułu.drawio  Ship.cpp  Ship.h  main.cpp
Heders/: Cargo.h  Map.h  Ship.h  Storage.h
scr/: Cargo.cpp  Ship.cpp  Storage.cpp
test-scr/: Cargo-gt.cpp  Ship-gt.cpp
